--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,2 +1,19 @@
 // app global css in SCSS form
 @import 'animate.css';
+
+.title {
+  font-family: 다음체;
+  font-size: 1.2rem;
+}
+
+.name {
+  font-family: 나눔고딕;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.tooltip {
+  background: rgba(49, 121, 151, 0.7);
+  border-radius: 0.5rem;
+  padding: 5px 12px;
+}
