--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -13,7 +13,8 @@
 }
 
 .tooltip {
-  background: rgba(49, 121, 151, 0.7);
+  background: rgba(100, 121, 151, 0.7);
   border-radius: 0.5rem;
+  font-size: 0.5rem;
   padding: 5px 12px;
 }
